--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "ws": "^7.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.2",
+    "@types/ws": "^7.2.7",
+    "jest": "^26.6.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ITenthusiasm/testing-websockets.git"
