--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testing-websockets",
   "version": "1.0.0",
-  "description": "Repository exemplifying how to write integration tests for WebSockets using Jest",
+  "description": "Repository exemplifying how to write integration tests for WebSocket servers using Jest.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
