refactor: Upgrade All Packages and Replace Babel with TypeScript
In retrospect, we should have done the Babel -> TypeScript change
separately since there are always gotchas that come with package
updates. But it's not worth perfecting the Git History right now,
so we'll just commit as is. The changes aren't too complicated.

For the most part, the code stayed the same. Primary Changes:
- Replace Babel with TypeScript (for simpler configuration).
  - Fix types in all files because of strict TS rules.
- Upgrade all packages.
  - Explicitly convert WebSocket message data to `string`s after new upgrade.
- Use Node's native ESModules.
  - Replace Jest with Vitest because of ESModules.
- Update GitHub username in License.
- Warn about new experiments in README.
  NOTE: The README "article" wasn't updated and probably won't be updated until
  we finish our experiments.

--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "testing-websockets",
   "version": "1.0.0",
-  "description": "Repository exemplifying how to write integration tests for WebSocket servers using Jest.",
-  "main": "index.js",
+  "description": "Repository exemplifying how to write integration tests for WebSocket servers using Vitest (compatible with Jest).",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
-    "ws": "^7.4.4"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/ws": "^7.4.1",
-    "jest": "^26.6.3"
+    "@types/node": "^18.19.39",
+    "@types/ws": "^8.5.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "vitest": "^1.6.0"
   },
   "repository": {
     "type": "git",
