feat: Improve the WebSocket Test Utilities
We'll probably move some files around as we start
publishing/editing things on Medium. But this work
here seems pretty much done.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "noEmit": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["javascript/**/*", "typescript/**/*"]
+  "include": ["javascript/**/*", "typescript/**/*", "v2-experimental/**/*"]
 }
